SDKs/wiremock.org/admin/2.30.1/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            GetAdminRequestsUnmatchedNearMissesResponse res = sdk.nearMisses.getAdminRequestsUnmatchedNearMisses();

            if (res.getAdminRequestsUnmatchedNearMisses200ApplicationJSONObject.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Near Misses

* `getAdminRequestsUnmatchedNearMisses` - Retrieve near-misses for all unmatched requests
* `postAdminNearMissesRequest` - Find near misses matching specific request
* `postAdminNearMissesRequestPattern` - Find near misses matching request pattern

### Recordings

* `getAdminRecordingsStatus` - Get recording status
* `postAdminRecordingsSnapshot` - Take a snapshot recording
* `postAdminRecordingsStart` - Start recording
* `postAdminRecordingsStop` - Stop recording

### Requests

* `deleteAdminRequests` - Delete all requests in journal
* `deleteAdminRequestsRequestId` - Delete request by ID
* `getAdminRequests` - Get all requests in journal
* `getAdminRequestsUnmatched` - Find unmatched requests
* `getAdminRequestsRequestId` - Get request by ID
* `postAdminRequestsCount` - Count requests by criteria
* `postAdminRequestsFind` - Find requests by criteria
* `postAdminRequestsRemove` - Remove requests by criteria
* `postAdminRequestsRemoveByMetadata` - Delete requests mappings matching metadata
* `postAdminRequestsReset` - Empty the request journal

### Scenarios

* `getAdminScenarios` - Get all scenarios
* `postAdminScenariosReset` - Reset the state of all scenarios

### Stub Mappings

* `deleteAdminMappings` - Delete all stub mappings
* `deleteAdminMappingsStubMappingId` - Delete a stub mapping
* `getAdminMappings` - Get all stub mappings
* `getAdminMappingsStubMappingId` - Get stub mapping by ID
* `postAdminMappings` - Create a new stub mapping
* `postAdminMappingsFindByMetadata` - Find stubs by matching on their metadata
* `postAdminMappingsRemoveByMetadata` - Delete stub mappings matching metadata
* `postAdminMappingsReset` - Reset stub mappings
* `postAdminMappingsSave` - Persist stub mappings
* `putAdminMappingsStubMappingId` - Update a stub mapping

### System

* `postAdminReset` - Reset mappings and request journal
* `postAdminSettings` - Update global settings
* `postAdminShutdown` - Shutdown the WireMock server

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
